overflow issue

--- a/src/styles/global/_base.styl
+++ b/src/styles/global/_base.styl
@@ -3,6 +3,7 @@ html, body {
   visibility: visible;
   margin: 0 auto;
   padding: 0;
+  overflow-x: hidden;
   max-width: appMaxWidth;
   box-sizing: border-box;
   font-size: 10px;
